fixed scrollbar issue

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ html, body {
     height: 100%;
     width: 100%;
     background: rgb(255, 254, 255);
+    overflow-y: hidden;
 }
 
 .main_header-container{
@@ -119,6 +120,7 @@ html, body {
     width: 100%;
     display: grid;
     grid-template-rows: 100%;
+    overflow: hidden;
 
 }
 
@@ -131,6 +133,7 @@ html, body {
     background: rgb(99, 99, 99);
     color: white !important;
     font-family: Raleway;
+    overflow: hidden;
 
 }
 
@@ -150,7 +153,7 @@ html, body {
 .item_wrap{
     display: grid;
     grid-row-start: 1;
-    overflow: scroll;
+    overflow: hidden;
 
 }
 .about-me_container{
